<resources>
    <string name="app_name">Journal</string>
    <string name="entry_default">Hello World Hello World Hello World Hello</string>
    <string name="entry_summary">The quick brown fox jumps over a very very lazy dog while trying to catch the very foolish rat.</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="text_content_hint">Write your stuff here</string>
    <string name="text_title_hint">Title</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="entry_updated_at_default">Updated at %d%</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="logo">Logo</string>
    <string name="text_no_entries">No entries available</string>
</resources>
