<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_normal">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_tiny"
        android:layout_marginStart="@dimen/space_tiny"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/entry_default"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_tiny"
        android:layout_marginStart="@dimen/space_tiny"
        android:layout_marginTop="@dimen/space_tiny"
        android:maxLines="2"
        android:text="@string/entry_summary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_tiny"
        android:layout_marginEnd="@dimen/space_tiny"
        android:layout_marginRight="@dimen/space_tiny"
        android:background="@android:color/transparent"
        android:contentDescription="@string/action_delete"
        android:padding="@dimen/space_tiny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete"/>

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_tiny"
        android:layout_marginLeft="@dimen/space_tiny"
        android:layout_marginStart="@dimen/space_tiny"
        android:layout_marginTop="@dimen/space_tiny"
        android:text="@string/entry_updated_at_default"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_summary" />
</android.support.constraint.ConstraintLayout>