<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context="com.alc.journal.EntryActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_normal">
            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_normal"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/text_title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_title_hint"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/entry_summary_size"/>
            <EditText
                android:id="@+id/text_body_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_content_hint"
                android:textSize="@dimen/entry_summary_size"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrey"
        android:gravity="end">
        <LinearLayout
            android:id="@+id/layout_editing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/action_save"
                android:drawableEnd="@drawable/ic_check"
                android:drawablePadding="@dimen/space_tiny"
                android:drawableRight="@drawable/ic_check"
                android:onClick="save"
                android:padding="@dimen/space_tiny"
                android:text="@string/action_save"
                android:textColor="@color/colorAccent"/>
            <Button
                android:id="@+id/button_clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/action_cancel"
                android:drawableEnd="@drawable/ic_clear"
                android:drawablePadding="@dimen/space_tiny"
                android:drawableRight="@drawable/ic_clear"
                android:onClick="cancel"
                android:padding="@dimen/space_tiny"
                android:text="@string/action_cancel"
                android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_viewing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/action_edit"
                android:drawableEnd="@drawable/ic_edit"
                android:drawablePadding="@dimen/space_tiny"
                android:drawableRight="@drawable/ic_edit"
                android:onClick="edit"
                android:padding="@dimen/space_tiny"
                android:text="@string/action_edit"
                android:textColor="@color/colorAccent" />
            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/action_delete"
                android:drawableEnd="@drawable/ic_delete"
                android:drawablePadding="@dimen/space_tiny"
                android:drawableRight="@drawable/ic_delete"
                android:onClick="delete"
                android:padding="@dimen/space_tiny"
                android:text="@string/action_delete"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

